--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,4 @@
-﻿alembic==1.13.1
-asgiref==3.8.1
-bcrypt==4.1.3
-beautifulsoup4==4.12.3
-blinker==1.8.2
-bs4==0.0.2
-certifi==2024.6.2
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comtypes==1.4.6
+
 crispy-tailwind==1.0.3
 diffusers==0.30.2
 distlib==0.3.8
@@ -16,66 +6,15 @@ Django==5.1
 django-cors-headers==4.4.0
 django-crispy-forms==2.2
 django-environ==0.11.2
+django-extensions
 djangorestframework==3.15.2
 dnspython==2.6.1
-email_validator==2.1.1
-filelock==3.14.0
-flash==1.0.3
-Flask==3.0.3
-Flask-Bcrypt==1.0.1
-Flask-Login==0.6.3
-Flask-Mail==0.10.0
-Flask-Migrate==4.0.7
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.1
-fpdf==1.7.2
-fsspec==2024.9.0
 greenlet==3.0.3
 gunicorn==23.0.0
-h11==0.14.0
-huggingface-hub==0.24.7
-idna==3.7
-importlib_metadata==8.5.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-joblib==1.4.2
-Mako==1.3.5
-markdown2==2.4.13
-MarkupSafe==2.1.5
-mpmath==1.3.0
-networkx==3.3
-numpy==2.1.0
-opencv-python==4.10.0.84
-packaging==24.1
-pillow==10.3.0
-platformdirs==4.2.2
-PyAudio==0.2.14
-PyMySQL==1.1.1
-pyttsx3==2.90
-PyYAML==6.0.2
-razorpay==1.2.0
-regex==2024.9.11
-requests==2.32.3
-safetensors==0.4.5
-scikit-learn==1.3.0
-scipy==1.14.1
-setuptools==74.0.0
-soupsieve==2.6
-SpeechRecognition==3.10.4
 SQLAlchemy==2.0.31
 sqlparse==0.5.0
-sympy==1.13.2
-threadpoolctl==3.5.0
-torch==2.4.1
-tqdm==4.66.5
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
 uvicorn==0.31.0
 virtualenv==20.26.2
 virtualenvwrapper-win==1.2.7
-Werkzeug==3.0.3
-wheel==0.44.0
 whitenoise==6.7.0
-WTForms==3.1.2
-zipp==3.20.2
+
