--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
-  "version": 2,
+  "functions": {
+    "api/**/*.py": {
+      "runtime": "python3.12"
+    }
+  },
   "builds": [
     {
       "src": "userend/asgi.py",
-      "use": "@vercel/python",
-      "config": {
-        "install": "pip install -r requirements.txt"
-      }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
