--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,12 @@
 {
-  "functions": {
-    "api/**/*.py": {
-      "runtime": "python3.12"
-    }
-  },
+  "version": 2,
   "builds": [
     {
       "src": "userend/asgi.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "install": "pip install -r requirements.txt"
+      }
     }
   ],
   "routes": [
