--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "userend/asgi.py": {
-      "runtime": "python3.12"
+      "runtime": "python3.12@latest"
     }
   },
   "routes": [
