--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "src": "userend/wsgi.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "static/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
